fix spacings

--- a/reanimar/src/main.sass
+++ b/reanimar/src/main.sass
@@ -23,7 +23,7 @@ h1, h2, h3
   margin: 0 0 .25em
 
 p
-  margin: 0 0 .75em
+  margin: .25em 0 .5em
   line-height: 1.75em
 
 small
@@ -164,5 +164,5 @@ h1, h2, h3
 
   p
     width: 100%
+    margin: .3em 0
     max-width: 25em
-    margin: 0
